Added spikmi widget

--- a/index.html
+++ b/index.html
@@ -74,5 +74,10 @@
       <!-- /.hero -->
     </header>
     <!-- /.header -->
+    <!-- Подключение виджета обратной связи через соцсети -->
+    <script
+      type="text/javascript"
+      src="https://spikmi.com/Widget?Id=4577"
+    ></script>
   </body>
 </html>
