--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main>
       <section class="offer bg-secondary">
         <div class="container">
-          <div class="offer__block offer-block">
+          <div class="offer__block offer-block offer-block_calc-bg">
             <h2 class="offer__title">Оставьте заявку на расчет</h2>
             <span class="offer__subtitle"
               >и получите скидку 30% на изготовление скинали или фартука для
@@ -599,6 +599,7 @@
         <!-- /.container -->
       </section>
       <!-- /.section price -->
+
       <section class="section steps">
         <div class="container">
           <h2 class="section-title section__title">Этапы работ</h2>
@@ -670,6 +671,159 @@
         <!-- /.container -->
       </section>
       <!-- /.section steps -->
+
+      <section class="section reviews">
+        <div class="container">
+          <h2 class="section-title section__title">Отзывы наших клиентов</h2>
+          <!-- /.section-title section__title -->
+          <div class="reviews-slider">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся с недопониманием со стороны
+                сотрудников банка, и иной раз идти не хочется...В очередной раз
+                "навешают лапши на уши" и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img
+                src="img/reviews/reviews-1.png"
+                alt=""
+                class="reviews-slider__image"
+              /><span class="reviews-slider__name"
+                >Екатерина Иванова <br />
+                Москва</span
+              >
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся с недопониманием со стороны
+                сотрудников банка, и иной раз идти не хочется...В очередной раз
+                "навешают лапши на уши" и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img
+                src="img/reviews/reviews-2.png"
+                alt=""
+                class="reviews-slider__image"
+              /><span class="reviews-slider__name"
+                >Елизавета Ляпишева <br />
+                Одесса</span
+              >
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся с недопониманием со стороны
+                сотрудников банка, и иной раз идти не хочется...В очередной раз
+                "навешают лапши на уши" и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img
+                src="img/reviews/reviews-3.png"
+                alt=""
+                class="reviews-slider__image"
+              /><span class="reviews-slider__name"
+                >Павел Зыгарин <br />
+                Таганрог</span
+              >
+              <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.reviews-slider -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section reviews -->
+
+      <section class="offer">
+        <div class="container">
+          <div class="offer__block offer-block offer-block_price-bg">
+            <h2 class="offer__title">Ищите где дешевле и лучше?</h2>
+            <span class="offer__subtitle"
+              >Если у Вас уже есть расчет от другой фирмы, но Вы хотите цену
+              дешевле, укажите ее - и мы вам пересчитаем заказ с максимальной
+              скидкой</span
+            >
+            <form action="#" class="form offer__form">
+              <div class="form__group">
+                <div class="form__row">
+                  <div class="form__group">
+                    <input
+                      type="text"
+                      class="input form__input"
+                      placeholder="Ваше имя"
+                    />
+                  </div>
+                  <div class="form__group">
+                    <input
+                      type="text"
+                      class="input form__input"
+                      placeholder="Ваш телефон"
+                    />
+                  </div>
+                  <div class="form__group">
+                    <input
+                      type="text"
+                      class="input form__input"
+                      placeholder="Ваша цена"
+                    />
+                  </div>
+                </div>
+                <div class="form__row">
+                  <div class="form__group">
+                    <input
+                      type="submit"
+                      class="button form__button form__button-price"
+                      value="Получить расчет со скидкой"
+                    />
+                  </div>
+                  <div class="form__row">
+                    <span class="form__policy"
+                      >Ваши данные надежно защищены. Отправление заявки ни к
+                      чему не обязывает
+                      <div class=""></div
+                    ></span>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section class="section factory">
+        <div class="container">
+          <h2 class="section-title section__title">О производтсве</h2>
+          <!-- /.section-title section__title -->
+          <div class="factory-block">
+            <div class="factory-block__image">
+              <img src="img/factory/factory-1.png" />
+            </div>
+            <!-- /.factory-block__image -->
+            <div class="factory-block__text">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+                ipsum blanditiis dignissimos, autem recusandae labore iure
+                delectus ut illum magni, odio veritatis corrupti et esse
+                laboriosam eum, commodi officiis corporis?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+                ipsum blanditiis dignissimos, autem recusandae labore iure
+                delectus ut illum magni, odio veritatis corrupti et esse
+                laboriosam eum, commodi officiis corporis?
+              </p>
+            </div>
+            <!-- /.factory-block__text -->
+          </div>
+          <!-- /.factory-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section factory -->
     </main>
     <!-- Подключение виджета обратной связи через соцсети -->
     <script
