Added block 'Map' with Yandex map

--- a/index.html
+++ b/index.html
@@ -870,6 +870,14 @@
         <!-- /.container -->
       </section>
       <!-- /.section contacts -->
+      <div class="map" id="map">
+        <script
+          type="text/javascript"
+          charset="utf-8"
+          async
+          src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1eb9b63100cdb5f19fa352e73487fd8e92cf378813ddc0cba5e5f12e86808931&amp;width=100%25&amp;height=410&amp;lang=en_FR&amp;scroll=false"
+        ></script>
+      </div>
     </main>
     <!-- Подключение виджета обратной связи через соцсети -->
     <script
