--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="features-block">
             <div class="features-block__item">
               <img
-                src="img/features/feature-1.svg"
+                src="img/features/feature-1.png"
                 alt="Бесплатный дизайн-макет"
                 class="features-block__image"
               />
@@ -160,7 +160,7 @@
             </div>
             <div class="features-block__item">
               <img
-                src="img/features/feature-2.svg"
+                src="img/features/feature-2.png"
                 alt="Пожизненная гарантия"
                 class="features-block__image"
               />
@@ -171,7 +171,7 @@
             </div>
             <div class="features-block__item">
               <img
-                src="img/features/feature-3.svg"
+                src="img/features/feature-3.png"
                 alt="Большой каталог изображений"
                 class="features-block__image"
               />
@@ -182,7 +182,7 @@
             </div>
             <div class="features-block__item">
               <img
-                src="img/features/feature-4.svg"
+                src="img/features/feature-4.png"
                 alt="100% соблюдение сроков"
                 class="features-block__image"
               />
@@ -193,7 +193,7 @@
             </div>
             <div class="features-block__item">
               <img
-                src="img/features/feature-5.svg"
+                src="img/features/feature-5.png"
                 alt="Собственное производство"
                 class="features-block__image"
               />
@@ -204,7 +204,7 @@
             </div>
             <div class="features-block__item">
               <img
-                src="img/features/feature-6.svg"
+                src="img/features/feature-6.png"
                 alt="Минимальная цена в городе от 1000 руб за кв.м."
                 class="features-block__image"
               />
@@ -878,7 +878,60 @@
           src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1eb9b63100cdb5f19fa352e73487fd8e92cf378813ddc0cba5e5f12e86808931&amp;width=100%25&amp;height=410&amp;lang=en_FR&amp;scroll=false"
         ></script>
       </div>
+
+      <section class="section questions">
+        <div class="container">
+          <div class="questions-block">
+            <h3 class="questions__title">Остались вопросы?</h3>
+            <!-- /.questions__title -->
+            <a href="#" class="questions__link">Задайте их менеджеру</a>
+            <!-- /.questions__link -->
+          </div>
+          <!-- /.questions-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section questions -->
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-block">
+          <div class="footer__description">
+            <h4 class="footer__title">Фабрика Скинали №1</h4>
+            <span class="footer__subtitle">ведущий производитель скинали</span>
+            <span class="footer__copy">© Фабрика скинали №1</span>
+          </div>
+          <!-- /.footer__description -->
+          <div class="footer__pay-info">
+            <img src="img/pay/pay-1.png" alt="" class="footer__pay-logo" />
+            <img src="img/pay/pay-2.png" alt="" class="footer__pay-logo" />
+            <img src="img/pay/pay-3.png" alt="" class="footer__pay-logo" />
+            <img src="img/pay/pay-4.png" alt="" class="footer__pay-logo" />
+          </div>
+          <!-- /.footer__pay-ingo -->
+          <div class="footer__contacts">
+            <a href="#" class="footer__phone">+7 499 123-45-67</a>
+            <a href="#" class="footer__mail">info@mail.ru</a>
+            <div class="footer-social">
+              <a href="#" class="footer-social__link">
+                <img src="img/social-icon/facebook.png" alt="" />
+              </a>
+              <a href="#" class="footer-social__link">
+                <img src="img/social-icon/twitter.png" alt="" />
+              </a>
+              <a href="#" class="footer-social__link">
+                <img src="img/social-icon/vkontakte.png" alt="" />
+              </a>
+            </div>
+          </div>
+          <!-- /.footer__contacts -->
+        </div>
+        <!-- /.footer-block -->
+      </div>
+      <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
     <!-- Подключение виджета обратной связи через соцсети -->
     <script
       type="text/javascript"
