--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <title>Фабрика скинали</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/twentytwenty.css" />
   </head>
   <body>
     <header class="header">
       <div class="menu">
         <div class="container">
           <nav class="menu__nav">
-            <a href="#" class="menu__link">Главная</a>
-            <a href="#" class="menu__link">Продукция</a>
-            <a href="#" class="menu__link">Примеры работ</a>
-            <a href="#" class="menu__link">Примерка изображений</a>
-            <a href="#" class="menu__link">Стоимость дилерам</a>
-            <a href="#" class="menu__link">О скинали</a>
+            <a href="#hero" class="menu__link">Главная</a>
+            <a href="#features" class="menu__link">Преимущества</a>
+            <a href="#before" class="menu__link">Примеры работ</a>
+            <a href="#catalog" class="menu__link">Каталог</a>
+            <a href="#price" class="menu__link">Стоимость дилерам</a>
+            <a href="#reviews" class="menu__link">О скинали</a>
           </nav>
         </div>
       </div>
@@ -54,15 +55,15 @@
                 >info@mail.cu</a
               >
             </div>
-            <button class="button-o navbar__button">
+            <a href="#offer" class="button-o navbar__button">
               Получить консультацию
-            </button>
+            </a>
           </div>
         </div>
         <!-- /.container -->
       </div>
       <!-- /.navbar -->
-      <div class="hero">
+      <div class="hero" id="hero">
         <div class="container">
           <h1 class="hero__title">
             Гарантия <br />минимальной цены <br />на скинали
@@ -76,7 +77,7 @@
     <!-- /.header -->
 
     <main>
-      <section class="offer bg-secondary">
+      <section class="offer bg-secondary" id="offer">
         <div class="container">
           <div class="offer__block offer-block offer-block_calc-bg">
             <h2 class="offer__title">Оставьте заявку на расчет</h2>
@@ -89,15 +90,31 @@
                 <div class="form__row">
                   <div class="form__group">
                     <label for="" class="form__label">Вид стекла</label>
-                    <input type="text" class="input form__input" />
+                    <input
+                      type="hidden"
+                      name="type"
+                      id="select-type"
+                      value="С печатью"
+                    />
+                    <div class="select form__select">
+                      <div class="select_checked">С печатью</div>
+                      <ul class="select__dropdown">
+                        <li class="select__option" data-value="С печатью">
+                          С печатью
+                        </li>
+                        <li class="select__option" data-value="Без печати">
+                          Без печати
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                   <div class="form__group">
                     <label for="" class="form__label">Ширина, см</label>
-                    <input type="text" class="input form__input" />
+                    <input type="number" class="input form__input" />
                   </div>
                   <div class="form__group">
                     <label for="" class="form__label">Высота, см</label>
-                    <input type="text" class="input form__input" />
+                    <input type="number" class="input form__input" />
                   </div>
                 </div>
                 <!-- .form__row -->
@@ -143,7 +160,7 @@
         </div>
       </section>
 
-      <section class="features section">
+      <section class="features section" id="features">
         <div class="container">
           <h2 class="section-title section__title">Наши преимущества</h2>
           <div class="features-block">
@@ -217,7 +234,7 @@
         </div>
       </section>
 
-      <section class="section catalog">
+      <section class="section catalog" id="catalog">
         <div class="container">
           <h2 class="section-title section__title">Каталог скинали</h2>
           <div class="catalog-block">
@@ -416,7 +433,7 @@
           </div>
           <!-- /.catalog-block -->
           <div class="catalog__link">
-            <a href="#" class="button catalog__link-more button__lg"
+            <a href="#hero" class="button catalog__link-more button__lg"
               >Смотреть весь каталог скинали</a
             >
             <span class="catalog__description"
@@ -428,13 +445,13 @@
       </section>
       <!-- /.section catalog -->
 
-      <section class="section blog">
+      <section class="section blog" id="blog">
         <div class="container">
           <div class="blog__heading">
             <h3 class="blog__title">
               Полезное или что важно знать о скинали...
             </h3>
-            <a href="#" class="blog__link-more">Читать все статьи</a>
+            <a href="#hero" class="blog__link-more">Читать все статьи</a>
           </div>
           <div class="blog-list">
             <div class="blog-card blog-list__card">
@@ -477,7 +494,7 @@
         </div>
       </section>
 
-      <section class="section price">
+      <section class="section price" id="price">
         <div class="container">
           <h2 class="section-title section__title">Цены и виды скинали</h2>
           <!-- /.section-title section__title -->
@@ -600,7 +617,7 @@
       </section>
       <!-- /.section price -->
 
-      <section class="section steps">
+      <section class="section steps" id="steps">
         <div class="container">
           <h2 class="section-title section__title">Этапы работ</h2>
           <!-- /.section-title section__title -->
@@ -672,7 +689,46 @@
       </section>
       <!-- /.section steps -->
 
-      <section class="section reviews">
+      <section class="section before" id="before">
+        <div class="container">
+          <h2 class="section-title section__title">До и после</h2>
+          <!-- /.section-title section__title -->
+          <div class="before-slider-wrap">
+            <div class="before-slider">
+              <div class="before-slider__item">
+                <div class="before-after">
+                  <img src="img/before-slider/sample-before.png" alt="" />
+                  <img src="img/before-slider/sample-after.png" alt="" />
+                </div>
+              </div>
+              <div class="before-slider__item">
+                <div class="before-after">
+                  <img src="img/before-slider/sample-before.png" alt="" />
+                  <img src="img/before-slider/sample-after.png" alt="" />
+                </div>
+              </div>
+              <div class="before-slider__item">
+                <div class="before-after">
+                  <img src="img/before-slider/sample-before.png" alt="" />
+                  <img src="img/before-slider/sample-after.png" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="before-slider-arrows">
+              <button class="arrow arrow-left">
+                <img src="img/before-slider/arrows/left.png" alt="" />
+              </button>
+              <button class="arrow arrow-right">
+                <img src="img/before-slider/arrows/right.png" alt="" />
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section before -->
+
+      <section class="section reviews" id="reviews">
         <div class="container">
           <h2 class="section-title section__title">Отзывы наших клиентов</h2>
           <!-- /.section-title section__title -->
@@ -759,7 +815,7 @@
                   </div>
                   <div class="form__group">
                     <input
-                      type="text"
+                      type="tel"
                       class="input form__input"
                       placeholder="Ваш телефон"
                     />
@@ -794,7 +850,7 @@
         </div>
       </section>
 
-      <section class="section factory">
+      <section class="section factory" id="factory">
         <div class="container">
           <h2 class="section-title section__title">О производтсве</h2>
           <!-- /.section-title section__title -->
@@ -825,7 +881,7 @@
       </section>
       <!-- /.section factory -->
 
-      <section class="section contacts">
+      <section class="section contacts" id="contacts">
         <div class="container">
           <div class="h2 section-title section__title">Контакты</div>
           <!-- /.h2 section-title section__title -->
@@ -837,7 +893,7 @@
                 class="contacts__image"
               />
               <div class="contacts__text">
-                <a href="#" class="contacts__link">+7 499 123-45-67</a>
+                <a href="#contacts" class="contacts__link">+7 499 123-45-67</a>
               </div>
               <!-- /.contacts__text -->
             </div>
@@ -859,7 +915,7 @@
                 class="contacts__image"
               />
               <div class="contacts__text">
-                <a href="#" class="contacts__link">5404177@mail.ru</a>
+                <a href="#contacts" class="contacts__link">5404177@mail.ru</a>
               </div>
               <!-- /.contacts__text -->
             </div>
@@ -870,6 +926,7 @@
         <!-- /.container -->
       </section>
       <!-- /.section contacts -->
+
       <div class="map" id="map">
         <script
           type="text/javascript"
@@ -884,7 +941,7 @@
           <div class="questions-block">
             <h3 class="questions__title">Остались вопросы?</h3>
             <!-- /.questions__title -->
-            <a href="#" class="questions__link">Задайте их менеджеру</a>
+            <a href="#contacts" class="questions__link">Задайте их менеджеру</a>
             <!-- /.questions__link -->
           </div>
           <!-- /.questions-block -->
@@ -911,16 +968,16 @@
           </div>
           <!-- /.footer__pay-ingo -->
           <div class="footer__contacts">
-            <a href="#" class="footer__phone">+7 499 123-45-67</a>
-            <a href="#" class="footer__mail">info@mail.ru</a>
+            <a href="#contacts" class="footer__phone">+7 499 123-45-67</a>
+            <a href="#contacts" class="footer__mail">info@mail.ru</a>
             <div class="footer-social">
-              <a href="#" class="footer-social__link">
+              <a href="#contacts" class="footer-social__link">
                 <img src="img/social-icon/facebook.png" alt="" />
               </a>
-              <a href="#" class="footer-social__link">
+              <a href="#contacts" class="footer-social__link">
                 <img src="img/social-icon/twitter.png" alt="" />
               </a>
-              <a href="#" class="footer-social__link">
+              <a href="#contacts" class="footer-social__link">
                 <img src="img/social-icon/vkontakte.png" alt="" />
               </a>
             </div>
@@ -937,5 +994,11 @@
       type="text/javascript"
       src="https://spikmi.com/Widget?Id=4577"
     ></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
